Correction commit interface
Suppression des fichiers php et remplacement par fichier html

--- a/retour.html
+++ b/retour.html
@@ -1,6 +1,3 @@
-<?php
-$titreVideo = "Ceci est un titre de vidéo";
-?>
 <!DOCTYPE html>
 <html>
     <head>
@@ -22,7 +19,7 @@ $titreVideo = "Ceci est un titre de vidéo";
                 <div class="formulaire_retour">
                     <div class="affichage">
                         <div class="titre_video">
-                            <label class="titre_video" ><?php echo $titreVideo; ?></label>
+                            <label class="titre_video"></label>
                         </div>
                         <div class="miniature">
                             <div class="col-md-8">
