--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="fichier_audio_container">
                             <div class="fichier_audio">
                                 <label>Fichier:</label>
-                                <input class="custom-file-input" type="file" name="input-file-preview" id="fichier"/>
+                                <input onchange="conditionalInput()" class="custom-file-input" type="file" name="input-file-preview" id="fichier"/>
                             </div>                        
                         </div>
                     </div>
@@ -50,7 +50,7 @@
 				  </datalist>
 				  <p>Select a locale</p>
             </form>
-			<div class="bouton">
+			<div id="zone" class="bouton">
 				<button onclick="getData()" id="submit" name="submit" type="submit" class="btn btn-success">Envoyer</button>
 			</div>
       </div>
