added search timestamp

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="ajaxQueries.js"></script>
 		<script type="text/javascript" src="checkInputs.js"></script>
 		<script type="text/javascript" src="displays.js"></script>
+		<script type="text/javascript" src="timestamp.js"></script>
     </head>
     <body>
 	<div id="firstI">
@@ -65,7 +66,7 @@
 				<button onclick="getData()" id="submit" name="submit" type="submit" class="btn btn-success">Envoyer</button>
 			</div>
       </div>  
-<<<<<<< HEAD
+
       </div>
       
 
@@ -80,15 +81,8 @@
                 <div class="titre_lbl">
                     <label class="titre_label" for="titre">Audio converter</label>
                 </div>
-=======
-	  </div>
-	  <div id="secondI" style="display:none;">
-	  <div class="container retour">
-            <div class="titre">
-                <label class="titre_label" for="titre">Audio converter</label>
->>>>>>> 728edcd2004307598614d11e9d2683e51be68b17
             </div>
-            <form name="f2" method="post" action="donnee.php" class="w3-container form_retour">
+            <form name="f2" class="w3-container form_retour">
                 <div class="formulaire_retour">
                     <div class="affichage">
                         <div class="titre_video">
@@ -96,12 +90,8 @@
                         </div>
                         <div class="miniature">
                             <div class="col-md-8">
-                                <div class="vid">
-<<<<<<< HEAD
-                                    <video id="video" controls><source src="foxVideo.mp4" type="video/mp4"></video>
-=======
-                                    <iframe width="350" height="200" src="https://www.youtube.com/embed/ac7KhViaVqc" allowfullscreen=""></iframe>
->>>>>>> 728edcd2004307598614d11e9d2683e51be68b17
+                                <div class="player">
+                                    <video id="video" class="video" controls><source src="foxVideo.mp4" type="video/mp4"></video>
                                 </div><!--./vid -->                                    
                             </div><!--.col -->
                         </div>
@@ -110,39 +100,31 @@
                                 <label class="label_recherche_mot">Transcription de l'audio en texte :</label>
                             </div>
                             <div class="affichage_zone_texte">
-                                <input id="message" type="text" class="zone_text" value="">
+								<textarea id="message" class="zone_text" value=""></textarea>
                             </div>                            
                         </div>
                     </div>
                     <div class="recherche">   
                         <div class="section1">
                             <div class="section_recherche_mot">
-<<<<<<< HEAD
                                 <div class="lbl_recherche_mot">
                                     <label class="label_recherche_mot">Entrez le mot à chercher :</label>
                                 </div>
-=======
->>>>>>> 728edcd2004307598614d11e9d2683e51be68b17
                                 <div class="recherche_mot">
                                     <input type="text" class="zone_rech_mot" id="rech_mot" >
                                 </div>
                                 <div class="bouton_recherche">
-                                    <button id="rech_mot_value" name="submit" type="submit" class="btn btn-success btn_recherche" onclick="rechmot()">Rechercher</button>
+                                    <button id="rech_mot_value" name="submit" type="submit" class="btn btn-success btn_recherche" onclick="searchTimeS(outId)">Rechercher</button>
                                 </div>
                             </div>                            
                         </div>
                         <div class="section2">
                             <div class="section_affichage_mot">
-<<<<<<< HEAD
                                 <div class="temps">
                                     <label class="label_recherche_mot">Résultats :</label>
                                 </div>
                                 <div class="temps_mot">
                                     <textarea class="text_temps_mot"></textarea>
-=======
-                                <div class="nb_occurences">
-                                    nb occurences
->>>>>>> 728edcd2004307598614d11e9d2683e51be68b17
                                 </div>
                                 <div class="temps">
                                     <!-- <textarea class="affichage_temps" name="affichage_temps" rows="5" cols="33"></textarea> -->
