added Short video

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                     <input type="text" class="zone_rech_mot" id="rech_mot" >
                                 </div>
                                 <div class="bouton_recherche">
-                                    <button id="rech_mot_value" name="submit" class="btn btn-success btn_recherche" onclick="searchTimeS(outId)">Rechercher</button>
+                                    <button id="rech_mot_value" class="btn btn-success btn_recherche" onclick="searchTimeS(outId)">Rechercher</button>
                                 </div>
                             </div>                            
                         </div>
