--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="miniature">
                             <div class="col-md-8">
                                 <div class="player">
-                                    <video id="video" class="video" controls><source src="foxVideo.mp4" type="video/mp4"></video>
+                                    <video id="video" class="video" controls><source src="" type="video/mp4"></video>
 
                                 </div><!--./vid -->                                    
                             </div><!--.col -->
