--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						</div>
 						<div class="miniature">
 								<div class="player">
-									<video id="video" class="video" controls><source src="foxVideo.mp4" type="video/mp4"></video>
+									<video id="video" class="video" controls><source src="" type="video/mp4"></video>
 								</div>
 						</div>
 						<div class="affichage_texte">
@@ -121,6 +121,7 @@
 								<div id="areaResults">
 								</div>
 							</div> 
+							<button type="button" id="dl_resultats" onclick="jsonToSrt()">Download the SRT file</button>
 						</div>
 					</div>					
 				</div>
